Bug 989913 - [Tarako-only] No sound from the earphone, BT headset or phone after answering incoming call and FM app gets killed r=fabrice a=1.3t+